<resources>
    <string name="app_name">Club Pádel</string>
    <string name="title_home">Inicio</string>
    <string name="title_notifications">Perfil</string>
    <string name="facebook_app_id">762908117726151</string>
    <string name="fb_login_protocol_scheme">fb762908117726151</string>
    <string name="ok">Sí</string>
    <string name="decline">No</string>
    <string name="buttonToday">Hoy</string>
    <string name="buttonTomorrow">Mañana</string>
    <string name="buttonNextDay">Pasado mañana</string>
    <string name="textFloor1">Pista 1</string>
    <string name="textFloor2">Pista 2</string>
    <string name="textFloor3">Pista 3</string>
    <string name="textFloor4">Pista 4</string>
    <string name="textFloor5">Pista 5</string>
    <string name="booking1_1">9:00</string>
    <string name="booking1_2">9:00</string>
    <string name="booking1_3">9:00</string>
    <string name="booking1_4">9:00</string>
    <string name="booking1_5">9:00</string>
    <string name="booking2_1">10:30</string>
    <string name="booking2_2">10:30</string>
    <string name="booking2_3">10:30</string>
    <string name="booking2_4">10:30</string>
    <string name="booking2_5">10:30</string>
    <string name="booking3_1">12:00</string>
    <string name="booking3_2">12:00</string>
    <string name="booking3_3">12:00</string>
    <string name="booking3_4">12:00</string>
    <string name="booking3_5">12:00</string>
    <string name="booking4_1">18:00</string>
    <string name="booking4_2">18:00</string>
    <string name="booking4_3">18:00</string>
    <string name="booking4_4">18:00</string>
    <string name="booking4_5">18:00</string>
    <string name="booking5_1">19:30</string>
    <string name="booking5_2">19:30</string>
    <string name="booking5_3">19:30</string>
    <string name="booking5_4">19:30</string>
    <string name="booking5_5">19:30</string>
    <string name="booking6_1">21:00</string>
    <string name="booking6_2">21:00</string>
    <string name="booking6_3">21:00</string>
    <string name="booking6_4">21:00</string>
    <string name="booking6_5">21:00</string>
    <string name="textInsertSignUpName">Nombre</string>
    <string name="insertSignUpName">Nombre</string>
    <string name="textInsertSignUpSurname">Apellidos</string>
    <string name="insertSignUpSurname">Apellidos</string>
    <string name="textInsertSignUpPhone">Móvil</string>
    <string name="insertSignUpPhone">Móvil</string>
    <string name="textInsertSignUpEmail">Correo</string>
    <string name="insertSignUpEmail">Correo</string>
    <string name="textInsertSignUpPass">Contraseña</string>
    <string name="insertSignUpPass">Contraseña</string>
    <string name="buttonNewAccount">Aceptar</string>
    <string name="textOldEmail">Correo actual</string>
    <string name="insertOldEmail">Correo actual</string>
    <string name="textModifyEmail">Correo nuevo</string>
    <string name="insertModifiedEmail">Correo nuevo</string>
    <string name="textPass">Contraseña</string>
    <string name="insertPass">Contraseña</string>
    <string name="buttonRequestEditEmail">Aceptar</string>
    <string name="textRememberEmail">Correo</string>
    <string name="insertRememberEmail">Correo</string>
    <string name="textOldPass">Contraseña actual</string>
    <string name="insertOldPass">Contraseña actual</string>
    <string name="textNewPass">Contraseña nueva</string>
    <string name="insertNewPass">Contraseña nueva</string>
    <string name="buttonRequestEditPass">Aceptar</string>
    <string name="textEmailNewPass">Correo</string>
    <string name="insertEmailNewPass">Correo</string>
    <string name="buttonRequestNewPass">Aceptar</string>
    <string name="textSocialLogin">Inicia sesión con tu red social</string>
    <string name="buttonSignInFacebook">Iniciar sesión con Facebook</string>
    <string name="buttonSignInGoogle">Iniciar sesión con Google</string>
    <string name="textO">o</string>
    <string name="textSignInEmail">Inicia sesión con tu dirección de correo</string>
    <string name="insertSignInEmail">Correo</string>
    <string name="insertSignInPass">Contraseña</string>
    <string name="buttonSignInEmail">Iniciar sesión con correo</string>
    <string name="textSignUp">¿Aún no tienes una cuenta?</string>
    <string name="buttonSignUp">Crear cuenta</string>
    <string name="buttonForgottenPass">Olvidé mi contraseña</string>
    <string name="textModifyName">Nombre</string>
    <string name="insertModifiedName">Nombre</string>
    <string name="textModifySurname">Apellidos</string>
    <string name="insertModifiedSurname">Apellidos</string>
    <string name="textModifyPhone">Móvil</string>
    <string name="insertModifiedPhone">Móvil</string>
    <string name="buttonStoreNewProfileInfo">Editar perfil</string>
    <string name="buttonEditEmail">Cambiar correo</string>
    <string name="buttonEditPass">Cambiar contraseña</string>
    <string name="buttonLinkFB">Vincular facebook</string>
    <string name="buttonLinkGoogle">Vincular google</string>
    <string name="buttonRemoveAccount">Eliminar cuenta</string>
    <string name="textReservasPendiente">Reservas activas</string>
    <string name="textReservasFinalizada">Reservas finalizadas</string>
    <string name="image_item">Imagen CardView</string>
    <string name="textRemoveEmail">Correo</string>
    <string name="insertRemoveEmail">Correo</string>
    <string name="textRemovePass">Contraseña</string>
    <string name="insertRemovePass">Contraseña</string>
    <string name="buttonRequestRemoveAccount">Aceptar</string>
    <string name="buttonBooking">Realizar una reserva</string>
    <string name="buttonMyBookings">Mis reservas</string>
    <string name="textWantTo">¿Quieres jugar?</string>
    <string name="textFloors">Nuestras pistas</string>
    <string name="Image1">Imagen 1</string>
    <string name="Image2">Imagen 2</string>
    <string name="Image3">Imagen 3</string>
    <string name="textFetchName">Nombre</string>
    <string name="textFetchSurname">Apellidos</string>
    <string name="textFetchPhone">Móvil</string>
    <string name="textFetchEmail">Correo</string>
    <string name="buttonEditProfile">Editar perfil</string>
    <string name="buttonSignOut">Cerrar sesión</string>
</resources>