<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditUserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textModifyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textModifyName"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/insertModifiedName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insertModifiedName"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <TextView
            android:id="@+id/textModifySurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textModifySurname"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/insertModifiedSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insertModifiedSurname"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <TextView
            android:id="@+id/textModifyPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textModifyPhone"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/insertModifiedPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insertModifiedPhone"
            android:importantForAutofill="no"
            android:inputType="phone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Button
            android:id="@+id/buttonStoreNewProfileInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/success"
            android:text="@string/buttonStoreNewProfileInfo"
            tools:targetApi="lollipop" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/buttonEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonEditEmail" />

        <Button
            android:id="@+id/buttonEditPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonEditPass" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonLinkFB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/marine"
                android:text="@string/buttonLinkFB"
                tools:ignore="ButtonStyle"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/buttonLinkGoogle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/marine"
                android:text="@string/buttonLinkGoogle"
                tools:ignore="ButtonStyle"
                tools:targetApi="lollipop" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/buttonRemoveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/danger"
            android:text="@string/buttonRemoveAccount"
            tools:targetApi="lollipop" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>