<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.RemoveAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textRemoveEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textRemoveEmail"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/insertRemoveEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insertRemoveEmail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <TextView
            android:id="@+id/textRemovePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textRemovePass"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/insertRemovePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insertRemovePass"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Button
            android:id="@+id/buttonRequestRemoveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/success"
            android:text="@string/buttonRequestRemoveAccount" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>