<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.start.ForgottenPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textEmailNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textEmailNewPass"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/insertEmailNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insertEmailNewPass"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Button
            android:id="@+id/buttonRequestNewPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/success"
            android:text="@string/buttonRequestNewPass"
            android:drawableLeft="@drawable/ic_check_mark"
            android:layout_gravity="center"
            tools:targetApi="lollipop"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>